syntax = "proto3";

option csharp_namespace = "Spravy.PasswordGenerator.Protos";

package spravy.password_generator;

message GetUserSecretRequest {
}

message GetUserSecretReply {
    bytes Secret = 1;
}

message AddPasswordItemRequest {
    string Name = 1;
    string Key = 2;
    string IsAvailableUpperLatin = 3;
    uint32 Length = 4;
    string Regex = 5;
    string IsAvailableLowerLatin = 6;
    string IsAvailableSpecialSymbols = 7;
    string IsAvailableNumber = 8;
    string CustomAvailableCharacters = 9;
}

message AddPasswordItemReply {
}

message GetPasswordItemsRequest {
}

message GetPasswordItemsReply {
    repeated PasswordItemGrpc Items = 1;
}

message PasswordItemGrpc {
    string Name = 1;
    string Key = 2;
    string IsAvailableUpperLatin = 3;
    uint32 Length = 4;
    string Regex = 5;
    bytes Id = 6;
    string IsAvailableLowerLatin = 7;
    string IsAvailableSpecialSymbols = 8;
    string IsAvailableNumber = 9;
    string CustomAvailableCharacters = 10;
}

message RemovePasswordItemRequest {
    bytes Id = 1;
}

message RemovePasswordItemReply {
}


message GetPasswordItemRequest {
    bytes Id = 1;
}

message GetPasswordItemReply {
    string Name = 1;
    string Key = 2;
    string IsAvailableUpperLatin = 3;
    uint32 Length = 4;
    string Regex = 5;
    bytes Id = 6;
    string IsAvailableLowerLatin = 7;
    string IsAvailableSpecialSymbols = 8;
    string IsAvailableNumber = 9;
    string CustomAvailableCharacters = 10;
}